[package]
name = "libasterix"
version = "0.1.0"
edition = "2024"
description = "A Rust library for parsing and encoding ASTERIX (All Purpose Structured Eurocontrol Surveillance Information Exchange) messages"
license = "MIT"
repository = "https://github.com/algonents/libasterix"
keywords = ["asterix", "aviation", "atm", "surveillance", "eurocontrol"]
categories = ["parsing", "aerospace"]

[dependencies]
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
